# gnome-contacts

./: configure.ac
data/ui/: contacts-contact-editor.ui
src/: Makefile.am  contacts-contact-pane.vala
src/editor/: contacts-editor-addresses-editor.vala  contacts-editor-avatar-editor.vala  contacts-editor-birthday-editor.vala  contacts-editor-composite-editor.vala  contacts-editor-contact-editor.vala  contacts-editor-details-editor-factory.vala  contacts-editor-details-editor.vala  contacts-editor-emails-editor.vala  contacts-editor-full-name-editor.vala  contacts-editor-nickname-editor.vala  contacts-editor-notes-editor.vala  contacts-editor-phones-editor.vala  contacts-editor-urls-editor.vala
